--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
   </head>
 
   <body>
-    
+    <header class="hero is-info">
+      <div class="hero-body">
+        <h1 class="title">Guess the number</h1>
+      </div>
+    </header>
+
+    <main class="section">
+      <!-- Column -->
+      <div class="columns">
+        <div class="column">
+          <h2 class="subtitle">Input and Output</h2>
+
+          <button class="button"
+          onclick="GuessTheNumber()">Guess The 
+          Number</button>
+        </div>
+    </main>
   </body>
 </html>
