--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>91883</title>
-    <script src="guess-the-number.js"></script>
-  </head>
 
-  <body>
-    <header class="hero is-info">
-      <div class="hero-body">
-        <h1 class="title">Guess the number</h1>
+<head>
+  <meta charset="utf-8" />
+  <title>91883</title>
+  <script src="guess-the-number.js"></script>
+</head>
+
+<body>
+  <header class="hero is-info">
+    <div class="hero-body">
+      <h1 class="title">Guess the number</h1>
+    </div>
+  </header>
+
+  <main class="section">
+    <!-- Column -->
+    <div class="columns">
+      <div class="column">
+        <h2 class="subtitle">Input and Output</h2>
+
+        <button class="button" onclick="guessNumber()">guessNumber</button>
       </div>
-    </header>
+  </main>
+</body>
 
-    <main class="section">
-      <!-- Column -->
-      <div class="columns">
-        <div class="column">
-          <h2 class="subtitle">Input and Output</h2>
-
-          <button class="button"
-          onclick="GuessTheNumber()">Guess The 
-          Number</button>
-        </div>
-    </main>
-  </body>
 </html>
