--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="column">
         <h2 class="subtitle">Input and Output</h2>
 
-        <button class="button" onclick="guessNumber()">guessNumber</button>
+        <button class="button" onclick="playGame()">playGame</button>
       </div>
   </main>
 </body>
