testing play again
Testing if it stops the game when the user says 'no'
expected: end game
passed!

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="column">
         <h2 class="subtitle">Input and Output</h2>
 
-        <button class="button" onclick="playGame()">playGame</button>
+        <button class="button" onclick="play()">Play Game</button>
       </div>
   </main>
 </body>
